--- a/login.html
+++ b/login.html
@@ -5,13 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登陆页</title>
-    <style>
 
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+
+        body {
+            background-color: #f2f2f2;
+        }
     </style>
 </head>
 
 <body>
-
+    <h2>大事件登陆界面</h2>
 </body>
 
 </html>
