--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="userinfo">
                     <img src="" class="layui-nav-img">
                     <span class="text-avatar"></span>
-                    <span id="welcome"></span>
+                    欢迎<span id="welcome"></span>
                 </div>
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <ul class="layui-nav layui-nav-tree" lay-shrink="all">
@@ -51,19 +51,19 @@
                     <li class="layui-nav-item">
                         <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发表文章</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-right"></i>文章类别</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-right"></i>文章列表</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-right"></i>发表文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
                             <dd><a href="user/userInfo.html" target="fm"><i
-                                        class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
+                                        class="layui-icon layui-icon-right"></i>基本资料</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-right"></i>更换头像</a></dd>
                             <dd><a href="user/userPwd.html" target="fm"><i
-                                        class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+                                        class="layui-icon layui-icon-right"></i>重置密码</a></dd>
                         </dl>
                     </li>
                 </ul>
