初始化 更换头像 页面

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="layui-layout layui-layout-admin">
         <div class="layui-header">
             <div class="layui-logo">
-                <img src="/assets/images/logo.png" alt="" />
+                <img src="/assets/images/logo.png" width="146" alt="" />
             </div>
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
@@ -61,7 +61,8 @@
                         <dl class="layui-nav-child">
                             <dd><a href="user/userInfo.html" target="fm"><i
                                         class="layui-icon layui-icon-right"></i>基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-right"></i>更换头像</a></dd>
+                            <dd><a href="/user/userAvatar.html" target="fm"><i
+                                        class="layui-icon layui-icon-right"></i>更换头像</a></dd>
                             <dd><a href="user/userPwd.html" target="fm"><i
                                         class="layui-icon layui-icon-right"></i>重置密码</a></dd>
                         </dl>
