--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@
 
 <body>
     <!-- logo -->
-    <div class="layui-main">
-        <img src="/assets/images/logo.png" alt="" />
+    <div class="layui-main logo">
+        <img src="/assets/images/logo2.png" alt="" />
     </div>
     <!-- login面板 -->
     <div class="login-box">
