--- a/user/userAvatar.html
+++ b/user/userAvatar.html
@@ -42,8 +42,10 @@
 
             <!-- 第二行的按钮区域 -->
             <div class="row2">
-                <button type="button" class="layui-btn">上传</button>
-                <button type="button" class="layui-btn layui-btn-danger">确定</button>
+                <!-- accept 属性可以指定允许用户选择什么类型的文件 -->
+                <input type="file" id="file" accept="image/png,image/jpeg" />
+                <button type="button" class="layui-btn" id="btnChoseImg">上传</button>
+                <button type="button" class="layui-btn layui-btn-danger" id="btnUpload">确定</button>
             </div>
         </div>
     </div>
@@ -51,15 +53,15 @@
 
 
 
-    <!-- 引入 layui.js
-    <script src='/assets/lib/layui/layui.all.js'></script> -->
+    <!-- 引入 layui.js -->
+    <script src='/assets/lib/layui/layui.all.js'></script>
     <!-- 引入 jQuery -->
     <script src='/assets/lib/jquery.js'></script>
     <!-- cropper相关js -->
     <script src="/assets/lib/cropper/Cropper.js"></script>
     <script src="/assets/lib/cropper/jquery-cropper.js"></script>
-    <!-- 引入自定义baseAPI 
-    <script src='/assets/js/baseAPI.js'></script>-->
+    <!-- 引入自定义baseAPI -->
+    <script src='/assets/js/baseAPI.js'></script>
     <!-- 引入自定义js -->
     <script src="/assets/js/user/useravatar.js"></script>
 </body>
