--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                         admin
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重设密码</a></dd>
+                        <dd><a href="/user/userInfo.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/user/userAvatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/userPwd.html" target="fm">重设密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="javascript:;" id="logout"><span
