文章类别界面完成

--- a/user/userAvatar.html
+++ b/user/userAvatar.html
@@ -44,7 +44,7 @@
             <div class="row2">
                 <!-- accept 属性可以指定允许用户选择什么类型的文件 -->
                 <input type="file" id="file" accept="image/png,image/jpeg" />
-                <button type="button" class="layui-btn" id="btnChoseImg">上传</button>
+                <button type="button" class="layui-btn layui-btn-normal" id="btnChoseImg">上传</button>
                 <button type="button" class="layui-btn layui-btn-danger" id="btnUpload">确定</button>
             </div>
         </div>
