--- a/user/userPwd.html
+++ b/user/userPwd.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <button class="layui-btn" lay-submit>修改密码</button>
+                    <button class="layui-btn layui-btn-normal" lay-submit>修改密码</button>
                     <button type="reset" id="btnReset" class="layui-btn layui-btn-primary">重置</button>
                 </div>
             </form>
