文章第一阶段

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                         <dl class="layui-nav-child">
                             <dd><a href="/article/art_cate.html" target="fm"><i
                                         class="layui-icon layui-icon-right"></i>文章类别</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-right"></i>文章列表</a></dd>
+                            <dd><a href="/article/art_list.html" target="fm"><i
+                                        class="layui-icon layui-icon-right"></i>文章列表</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-right"></i>发表文章</a></dd>
                         </dl>
                     </li>
