--- a/article/art_list.html
+++ b/article/art_list.html
@@ -11,15 +11,75 @@
 
 <body>
     <div class="layui-card">
-        <div class="layui-card-header">卡片面板</div>
+        <div class="layui-card-header">文章列表</div>
         <div class="layui-card-body">
-            卡片式面板面板通常用于非白色背景色的主体内<br>
-            从而映衬出边框投影
+            <!-- 筛选区域 -->
+            <form class="layui-form" id="form-search">
+                <div class="layui-form-item layui-inline">
+                    <select name="cate_id"></select>
+                </div>
+                <div class="layui-form-item layui-inline">
+                    <select name="state">
+                        <option value="">所有状态</option>
+                        <option value="已发布">已发布</option>
+                        <option value="草稿">草稿</option>
+                    </select>
+                </div>
+                <div class="layui-form-item layui-inline">
+                    <button class="layui-btn" lay-submit>筛选</button>
+                </div>
+            </form>
+            <!-- 列表区域 -->
+            <table class="layui-table">
+                <colgroup>
+                    <col />
+                    <col width="150" />
+                    <col width="180" />
+                    <col width="150" />
+                    <col width="150" />
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>文章标题</th>
+                        <th>分类</th>
+                        <th>发表时间</th>
+                        <th>状态</th>
+                        <th>操作</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+            <!-- 分页区域 -->
+            <div id="pageBox"></div>
         </div>
     </div>
 
+    <!-- 文章列表的模板引擎 -->
+    <script type="text/html" id="tpl-table">
+        {{each data}}
+        <tr>
+            <td>{{$value.title}}</td>
+            <td>{{$value.cate_name}}</td>
+            <td>{{$value.pub_date|dataFormat}}</td>
+            <td>{{$value.state}}</td>
+            <td>
+                <button type="button" class="layui-btn layui-btn-xs">编辑</button>
+                <button type="button" class="layui-btn layui-btn-danger layui-btn-xs btn-delete"
+                    data-id="{{$value.Id}}">删除</button>
+            </td>
+        </tr>
+        {{/each}}
+    </script>
 
-
+    <!-- 文章类型的模板引擎 -->
+    <script type="text/html" id="tpl-cate">
+        <!-- 固定的所有分类选项 -->
+    <option value="">所有分类</option>
+    <!-- 循环分类 -->
+    {{each data}}
+    <option value="{{$value.Id}}">{{$value.name}}</option>
+    {{/each}}
+    </script>
 
 
 
@@ -28,6 +88,8 @@
     <script src='/assets/lib/layui/layui.all.js'></script>
     <!-- 引入 jQuery -->
     <script src='/assets/lib/jquery.js'></script>
+    <!-- 引入模板引擎js -->
+    <script src="/assets/lib/template-web.js"></script>
     <!-- 引入自定义baseAPI -->
     <script src='/assets/js/baseAPI.js'></script>
     <!-- 引入自定义js -->
