--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                                         class="layui-icon layui-icon-right"></i>文章类别</a></dd>
                             <dd><a href="/article/art_list.html" target="fm"><i
                                         class="layui-icon layui-icon-right"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-right"></i>发表文章</a></dd>
+                            <dd><a href="/article/art_pub.html" target="fm"><i
+                                        class="layui-icon layui-icon-right"></i>发表文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
